variable private & constantes